hard-gists/d44132ae3bdcc0ca96a9f9f84d6d3463/run.log
=== Docker Run Log for d44132ae3bdcc0ca96a9f9f84d6d3463 ===
Started at: Mi 29. Okt 20:25:01 CET 2025

[2025-10-29 20:25:01] START: Running container for d44132ae3bdcc0ca96a9f9f84d6d3463
[2025-10-29 20:25:01] SUCCESS: Container fe2c9b7afccd73278c09764aa1467889378b31ff41062332a18a15b7b86ed58c started for d44132ae3bdcc0ca96a9f9f84d6d3463
=== Container logs for d44132ae3bdcc0ca96a9f9f84d6d3463 ===
  File "/snippet.py", line 101
    print "Select() no Root or Obj"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for d44132ae3bdcc0ca96a9f9f84d6d3463 ===
[2025-10-29 20:25:03] INFO: Container fe2c9b7afccd73278c09764aa1467889378b31ff41062332a18a15b7b86ed58c has stopped
